--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 asgiref==3.11.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+defusedxml==0.7.1
 Django==6.0
+django-bootstrap-icons==0.9.0
 django-bootstrap5==26.1
 django-extensions==4.1
+idna==3.11
+requests==2.32.5
 sqlparse==0.5.5
+urllib3==2.6.3
