--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-bootstrap-icons==0.9.0
 django-bootstrap5==26.1
 django-extensions==4.1
 idna==3.11
+pillow==12.1.0
 requests==2.32.5
 sqlparse==0.5.5
 urllib3==2.6.3
